# Bevy-Maze

./: Cargo.toml
assets/: maze.blend  maze.blend1  maze_corner.glb  maze_floor.glb  maze_tunnel.glb  maze_wall.glb
src/: main.rs  maze.rs  player.rs
